--- a/index.html
+++ b/index.html
@@ -5,23 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GTA V Anticheat Signatures</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.datatables.net/2.0.5/css/dataTables.bootstrap5.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body data-bs-theme="dark">
-    <nav class="navbar bg-primary" >
+    <nav class="navbar bg-primary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="https://github.com/yubie-re">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Rockstar_Games_Logo.svg/835px-Rockstar_Games_Logo.svg.png" style="width:40px"/>
-            GTA 5 Signature Database
-          </a>
+            <a class="navbar-brand" href="https://github.com/yubie-re">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Rockstar_Games_Logo.svg/835px-Rockstar_Games_Logo.svg.png"
+                    style="width:40px" />
+                GTA 5 Signature Database
+            </a>
         </div>
-      </nav>
+    </nav>
 
     <div class="container mx-auto p-2">
-        <p class="lead">This contains all past signatures (starting 4/18/2024) added to GTA V's anticheat system. Translations of signature hashes are provided when possible.</p>
+        <p class="lead">This contains all past signatures (starting 4/18/2024) added to GTA V's anticheat system.
+            Translations of signature hashes are provided when possible.</p>
         <h3>Cheat Signatures</h3>
         <p>Used to detect cheats which are injected</p>
         <table id="rtmaTable" class="table table-striped">
@@ -36,7 +39,11 @@
     <script src="https://cdn.datatables.net/2.0.5/js/dataTables.bootstrap5.js"></script>
 
     <script>
-        
+        function timeConverter(unix){
+            var a = new Date(unix * 1000);
+            return a.toISOString().substring(0, 10);  
+        }
+
         fetch('https://raw.githubusercontent.com/yubie-re/gta-sig-db/main/sig_db.json')
             .then(response => response.json())
             .then(data => {
@@ -44,34 +51,36 @@
                 console.log(data);
                 var rtmaArr = [];
                 var integArr = [];
-                data['RTMA'].forEach(dat=>{
-                    rtmaArr.push([String(dat.m_firstByte) + " - " + String.fromCharCode(dat.m_firstByte), String(dat.m_len), String(dat.m_hash), String(dat.m_pageLow), String(dat.m_pageHigh), String(dat.m_protFlags), String(dat.m_moduleSize * 4000 / 1000000), String(dat.time), String(dat.build), '<code>' + (dat.translation|| '') + '</code>' ]);
+                data['RTMA'].forEach(dat => {
+                    rtmaArr.push([String(dat.m_firstByte) + " - " + String.fromCharCode(dat.m_firstByte), String(dat.m_len), String(dat.m_hash), String(dat.m_pageLow), String(dat.m_pageHigh), String(dat.m_protFlags), String(dat.m_moduleSize * 4000 / 1000000), timeConverter(dat.time), String(dat.build), '<code>' + (dat.translation || '') + '</code>']);
                 });
-                data['INTG'].forEach(dat=>{
-                    integArr.push([String(dat.m_firstByte) + Char(dat.m_firstByte), String(dat.m_len), String(dat.m_hash), String(dat.m_pageLow), String(dat.m_pageHigh), String(dat.time), String(dat.build), String(dat.build), '<code>' + (dat.translation|| '') + '</code>']);
+                data['INTG'].forEach(dat => {
+                    integArr.push([String(dat.m_firstByte) + " - " + String.fromCharCode(dat.m_firstByte), String(dat.m_len), String(dat.m_hash), String(dat.m_pageLow), String(dat.m_pageHigh), timeConverter(dat.time), String(dat.build), String(dat.build), '<code>' + (dat.translation || '') + '</code>']);
                 });
-                new DataTable('#rtmaTable', {data: rtmaArr, order: [[7, 'desc']], columns:[{title: "First Byte"}, {title: "Size"}, {title: "Hash"}, {title: "Pg Low"}, {title: "Pg High"}, {title: "Flags"}, {title: "Module Size (MB)"}, {title: "Time"}, {title:"Build"}, {title:"Translation"}]});
-                new DataTable('#intgTable', {data: integArr, order: [[4, 'desc']], columns:[{title: "First Byte"}, {title: "Size"}, {title: "Hash"}, {title: "Pg Low"}, {title: "Pg High"}, {title: "Time"}, {title:"Build"}, {title:"Translation"}]});
+                new DataTable('#rtmaTable', { data: rtmaArr, order: [[7, 'desc']], columns: [{ title: "First Byte" }, { title: "Size" }, { title: "Hash" }, { title: "Pg Low" }, { title: "Pg High" }, { title: "Flags" }, { title: "Module Size (MB)" }, { title: "Time" }, { title: "Build" }, { title: "Translation" }] });
+                new DataTable('#intgTable', { data: integArr, order: [[4, 'desc']], columns: [{ title: "First Byte" }, { title: "Size" }, { title: "Hash" }, { title: "Pg Low" }, { title: "Pg High" }, { title: "Time" }, { title: "Build" }, { title: "Translation" }] });
             })
             .catch(error => {
                 console.error('Error loading or parsing the JSON data:', error);
                 alert('Failed to load JSON data: ' + error.message);
             });
     </script>
-    </body>
+</body>
 
 <footer>
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-          <div class="col-md-4 d-flex align-items-center">
-            <span class="mb-3 mb-md-0 text-muted"><a href="https://github.com/yubie-re" class="text-muted">©2024 yubie-re</a></span>
-          </div>
-      
-          <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-           <a class="text-muted" href="https://github.com/yubie-re/gtav-sigscan"><i class="bi bi-github"></i></use></svg></a>
-          </ul>
+            <div class="col-md-4 d-flex align-items-center">
+                <span class="mb-3 mb-md-0 text-muted"><a href="https://github.com/yubie-re" class="text-muted">©2024
+                        yubie-re</a></span>
+            </div>
+
+            <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+                <a class="text-muted" href="https://github.com/yubie-re/gtav-sigscan"><i class="bi bi-github"></i></use>
+                    </svg></a>
+            </ul>
         </footer>
-      </div>
+    </div>
 </footer>
 
 </html>
